crates/hir-def/tests/snapshots/lower_snapshots__constructors_varargs_throws.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

class Point {
    Point() {}
    Point(int x, int y) {}
    Point(int... coords) throws IllegalArgumentException {}
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
class Point @1..118
  constructor Point() @19..29
  constructor Point(int x, int y) @34..56
  constructor Point(int... coords) throws IllegalArgumentException @61..116
