crates/hir-def/tests/snapshots/lower_snapshots__empty_file.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
