crates/hir-def/tests/snapshots/lower_snapshots__enum_abstract_method_constant_bodies.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

enum Op {
    ADD {
        int apply(int a, int b) { return a + b; }
    },
    SUB {
        int apply(int a, int b) { return a - b; }
    };

    abstract int apply(int a, int b);
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
enum Op @1..185
  constant ADD @15..76
  constant SUB @82..143
  method apply(int a, int b) -> int [abstract] @150..183
