crates/hir-def/tests/snapshots/lower_snapshots__enum_implements.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

enum Op implements Runnable {
    ADD,
    SUB {
        public void run() {}
    };
    public void run() {}
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
enum Op @1..112
  implements Runnable
  constant ADD @35..38
  constant SUB @44..84
  method run() -> void [public] @90..110
