crates/hir-def/tests/snapshots/lower_snapshots__generic_class.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

class Box<T> {
    T value;
}

class Foo<T extends Comparable<T> & Serializable, U> extends Bar<T> implements Runnable<T>, Serializable {
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
class Box<T> @1..30
  field value: T @22..27
class Foo<T extends Comparable<T> & Serializable, U> extends Bar<T> implements Runnable<T>, Serializable @32..140
